# CPP-Tetris

./: CMakeLists.txt  README.md
src/: main.cpp
src/controller/: fieldcontroller.cpp  fieldcontroller.h  figurecommands.h  figurecontroller.cpp  figurecontroller.h  figuregenerator.cpp  figuregenerator.h  figuremover.cpp  figuremover.h  game.cpp  game.h  gamecontroller.cpp  gamecontroller.h  inputcommands.cpp  inputcommands.h
src/model/: field.cpp  field.h  figureenum.h  figures.h  modelconfig.h
src/view/: consoleview.cpp  consoleview.h  gameviewinfo.h  sfmlview.cpp  sfmlview.h  view.h
